api/swimos_form/src/tests/derive/form/incorrect_tag_type.stderr
error: Expected a string literal
  --> src/tests/derive/form/incorrect_tag_type.rs:19:18
   |
19 |     #[form(tag = 13)]
   |                  ^^
